--- a/theme/dark.css
+++ b/theme/dark.css
@@ -22,6 +22,10 @@
   --atheme-yellow: #f1fa8c;
 }
 
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .hljs {
   display: block;
   overflow-x: auto;
@@ -121,7 +125,8 @@ h3,
 h4,
 h5,
 h6 {
-  color: white
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 h1 strong,
 h2 strong,
@@ -133,50 +138,47 @@ h6 strong {
 }
 
 h1 {
-  font-size: 1.8em;
-  padding-top: 15%;
+  font-size: 1.5em;
+}
+
+section h1:nth-child(1) {
+  padding-top: 10%;
 }
 
 h2 {
-  font-size: 1.5em;
-  padding-bottom: 5%;
+  font-size: 1.3em;
+  padding-bottom: 0.5em;
 }
 
 h3 {
-  font-size: 1.3em;
-}
-
-h4 {
   font-size: 1.1em;
 }
 
-h5 {
+h4 {
   font-size: 1em;
 }
 
-h6 {
+h5 {
   font-size: 0.9em;
 }
 
-p,
-blockquote {
-  margin: 1em 0 0 0;
+h6 {
+  font-size: 0.7em;
 }
 
 blockquote p {
-  color: lightgrey;
-  font-weight: bold;
-  font-style: italic;
+  color: gray
 }
 
 ul > li,
 ol > li {
-  color:  white
+  color:  white;
+  font-size: 0.9em;
 }
 
 code {
   display: inline-block;
-  font-size: 0.8em;
+  font-size: 0.9em;
   letter-spacing: 0;
   margin: -0.1em 0.15em;
   padding: 0.1em 0.2em;
@@ -189,8 +191,8 @@ pre {
   margin: 1em 0 0 0;
   min-height: 1em;
   overflow: visible;
-
 }
+
 pre code {
   box-sizing: border-box;
   margin: 0;
@@ -245,6 +247,7 @@ section mark {
 }
 section p {
   color: white;
+
 }
 section code {
   background: #3e9ce0;
