--- a/theme/dark.css
+++ b/theme/dark.css
@@ -126,7 +126,7 @@ h4,
 h5,
 h6 {
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
 }
 h1 strong,
 h2 strong,
