--- a/theme/dark.css
+++ b/theme/dark.css
@@ -23,7 +23,7 @@
 }
 
 html {
-  font-family: Helvetica, "Microsoft YaHei", "Consolas", sans-serif;
+  font-family: Helvetica, "Microsoft YaHei", "Source Code Pro", "Consolas", sans-serif;
 }
 
 .hljs {
@@ -220,10 +220,10 @@ table td {
 }
 
 section {
-  font-size: 2.1em;
-  line-height: 1.35;
+  font-size: 1.9em;
+  line-height: 1.3;
   letter-spacing: 1.25px;
-  padding: 70px;
+  padding: 2em;
   color: var(--atheme-foreground);
   background-color: var(--atheme-background);
 }
@@ -273,14 +273,14 @@ section table tbody > tr:nth-child(even) td,
 section table tbody > tr:nth-child(even) th {
   background: var(--atheme-current-line);
 }
-
+ 
 header,
 footer,
 section::after {
   box-sizing: border-box;
   font-size: 66%;
-  height: 70px;
-  line-height: 50px;
+  height: 1.5em;
+  line-height: 1.1em;
   overflow: hidden;
   padding: 10px 25px;
   position: absolute;
