--- a/theme/dark.css
+++ b/theme/dark.css
@@ -8,6 +8,11 @@
  * @size 16:9 1920px 1080px
  */
 
+@font-face {
+  font-family: 'Source Code Pro', monospace;
+  src: url('SourceCodePro-Medium.ttf') format('truetype');
+}  
+
 :root {
   --atheme-background: black;
   --atheme-current-line: #44475a;
@@ -23,7 +28,7 @@
 }
 
 html {
-  font-family: Helvetica, "Microsoft YaHei", "Source Code Pro", "Consolas", sans-serif;
+  font-family: sans-serif;
 }
 
 .hljs {
@@ -115,9 +120,9 @@ h4,
 h5,
 h6 {
   color: white;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  font-family: sans-serif;
 }
+
 h1 strong,
 h2 strong,
 h3 strong,
@@ -168,6 +173,7 @@ ol > li {
 }
 
 code {
+  font-family: "Source Code Pro", monospace;
   display: inline-block;
   font-size: 0.9em;
   letter-spacing: 0;
@@ -222,7 +228,11 @@ table td {
 section {
   font-size: 1.9em;
   line-height: 1.3;
+  display: flex;
   letter-spacing: 1.25px;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
   padding: 2em;
   color: var(--atheme-foreground);
   background-color: var(--atheme-background);
