chore: style update

--- a/theme/dark.css
+++ b/theme/dark.css
@@ -8,22 +8,17 @@
  * @size 16:9 1920px 1080px
  */
 
-@font-face {
-  font-family: 'Source Code Pro', monospace;
-  src: url('SourceCodePro-Medium.ttf') format('truetype');
-}  
-
 :root {
   --atheme-background: black;
-  --atheme-current-line: #44475a;
-  --atheme-foreground: #f8f8f2;
-  --atheme-comment: #6272a4;
+  --atheme-current-line: #4eb6e7;
+  --atheme-foreground: #f8f8f2e0;
+  --atheme-comment: #007e9e;
   --atheme-cyan: #8be9fd;
   --atheme-green: #50fa7b;
   --atheme-orange: #ffb86c;
   --atheme-pink: #ff79c6;
   --atheme-purple: #bd93f9;
-  --atheme-red: #ff5555;
+  --atheme-red: #ff5555d2;
   --atheme-yellow: #f1fa8c;
 }
 
@@ -55,7 +50,7 @@ html {
 .hljs-regexp,
 .hljs-literal,
 .hljs-link {
-  color: #ae81ff;
+  color: #ad81ffd7;
 }
 
 .hljs-code,
@@ -77,7 +72,7 @@ html {
 .hljs-selector-tag,
 .hljs-name,
 .hljs-attr {
-  color: #f92672;
+  color: var(--atheme-red);
 }
 
 .hljs-symbol,
@@ -100,13 +95,13 @@ html {
 .hljs-addition,
 .hljs-variable,
 .hljs-template-variable {
-  color: #e6db74;
+  color: var(--atheme-yellow);
 }
 
 .hljs-comment,
 .hljs-deletion,
 .hljs-meta {
-  color: #75715e;
+  color:var(--atheme-comment);
 }
 
 svg[data-marp-fitting="svg"] {
@@ -162,7 +157,8 @@ h6 {
 }
 
 blockquote p {
-  color: rgba(154, 247, 249, 0.726);
+  color: var(--atheme-comment);
+  font-weight: bolder;
   font-size: 1.2em;
   margin: 0;
 }
@@ -174,19 +170,18 @@ ol > li {
 }
 
 code {
-  font-family: "Source Code Pro", monospace;
+  font-family: sans-serif;
   display: inline-block;
   font-size: 0.9em;
   letter-spacing: 0;
   margin: -0.1em 0.15em;
   padding: 0.1em 0.2em;
   vertical-align: baseline;
-  color: var(--atheme-green);
 }
 
 pre {
   display: block;
-  margin: 1em 0 0 0;
+  margin: 1em;
   min-height: 1em;
   overflow: visible;
 }
@@ -199,7 +194,8 @@ pre code {
   font-size: 0.7em;
   border: white;
   border-style: dashed;
-  border-width: 1px;
+  border-width: 0.5px;
+  color: var(--atheme-foreground);
 }
 
 pre code svg[data-marp-fitting="svg"] {
@@ -248,11 +244,11 @@ section mark {
   color: #3e9ce0;
 }
 section p {
-  color: white;
+  color: var(--atheme-foreground);
 }
 section code {
-  background: #3e9ce0;
-  color: white;
+  background: var(--atheme-cyan);
+  color: rgba(2, 7, 26, 0.801);
   font-weight: bold;
 }
 section h1 strong,
@@ -315,4 +311,9 @@ section::after {
   right: 0;
   bottom: 0;
   font-size: 80%;
+}
+
+a {
+  color: var(--atheme-cyan);
+  text-decoration: none;
 }
