--- a/theme/dark.css
+++ b/theme/dark.css
@@ -29,8 +29,10 @@ h4,
 h5,
 h6,
 p,
-section {
-  font-family: Arial, Helvetica, sans-serif;
+section,
+li {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .hljs {
